--- a/mandelbulber2/formula/ui/transf_difs_grid_v3.ui
+++ b/mandelbulber2/formula/ui/transf_difs_grid_v3.ui
@@ -807,7 +807,7 @@
        </property>
       </widget>
      </item>
-     <item row="10" column="1">
+     <item row="11" column="1">
       <widget class="MyDoubleSpinBox" name="spinbox3_transf_scale3D_000_x">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -852,7 +852,7 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="1">
+     <item row="10" column="1">
       <widget class="Line" name="line_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -899,7 +899,7 @@
        </property>
       </widget>
      </item>
-     <item row="11" column="1">
+     <item row="12" column="1">
       <widget class="MyDoubleSpinBox" name="spinbox3_transf_scale3D_000_y">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -969,14 +969,14 @@
        </property>
       </widget>
      </item>
-     <item row="10" column="0">
+     <item row="11" column="0">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledF_false">
        <property name="text">
         <string notr="true">sin zx</string>
        </property>
       </widget>
      </item>
-     <item row="11" column="0">
+     <item row="12" column="0">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledG_false">
        <property name="text">
         <string notr="true">sin zy</string>
@@ -1085,28 +1085,28 @@
        </property>
       </widget>
      </item>
-     <item row="12" column="1">
+     <item row="13" column="1">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledD_false">
        <property name="text">
         <string notr="true">circle</string>
        </property>
       </widget>
      </item>
-     <item row="12" column="0">
+     <item row="13" column="0">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledBx">
        <property name="text">
         <string notr="true">square</string>
        </property>
       </widget>
      </item>
-     <item row="13" column="0" rowspan="3">
+     <item row="14" column="0" rowspan="3">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledK_false">
        <property name="text">
         <string notr="true">sin zx</string>
        </property>
       </widget>
      </item>
-     <item row="13" column="1" rowspan="3">
+     <item row="14" column="1" rowspan="3">
       <widget class="MyDoubleSpinBox" name="spinbox3_transf_scale3D_000_z">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1134,6 +1134,44 @@
        </property>
        <property name="value">
         <double>0.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="1">
+      <widget class="MyDoubleSpinBox" name="spinbox3_transf_scale3D_111_z">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="prefix">
+        <string/>
+       </property>
+       <property name="suffix">
+        <string/>
+       </property>
+       <property name="decimals">
+        <number>6</number>
+       </property>
+       <property name="minimum">
+        <double>-99.998999999999995</double>
+       </property>
+       <property name="maximum">
+        <double>99.998999999999995</double>
+       </property>
+       <property name="singleStep">
+        <double>0.100000000000000</double>
+       </property>
+       <property name="value">
+        <double>0.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="0">
+      <widget class="QLabel" name="label_21">
+       <property name="text">
+        <string>temp:</string>
        </property>
       </widget>
      </item>
@@ -1252,7 +1290,7 @@
         <item row="3" column="2">
          <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetA_0">
           <property name="enabled">
-           <bool>false</bool>
+           <bool>true</bool>
           </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1283,7 +1321,7 @@
         <item row="3" column="1">
          <widget class="QLabel" name="label_30">
           <property name="enabled">
-           <bool>false</bool>
+           <bool>true</bool>
           </property>
           <property name="text">
            <string>offset:</string>
@@ -1293,7 +1331,7 @@
         <item row="4" column="1">
          <widget class="QLabel" name="label_29">
           <property name="enabled">
-           <bool>false</bool>
+           <bool>true</bool>
           </property>
           <property name="text">
            <string>height:</string>
@@ -1303,7 +1341,7 @@
         <item row="4" column="2">
          <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetB_0">
           <property name="enabled">
-           <bool>false</bool>
+           <bool>true</bool>
           </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1331,6 +1369,13 @@
           </property>
          </widget>
         </item>
+        <item row="5" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledY_false">
+          <property name="text">
+           <string notr="true">temp</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
      </layout>
@@ -1344,7 +1389,7 @@
      <item>
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledR_false">
        <property name="text">
-        <string notr="true">plane</string>
+        <string notr="true">Plane</string>
        </property>
       </widget>
      </item>
@@ -1388,7 +1433,7 @@
    <item>
     <widget class="MyGroupBox" name="groupCheck_transf_function_enabledT_false">
      <property name="title">
-      <string>clip&amp;</string>
+      <string>Clip&amp;</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
@@ -1410,7 +1455,7 @@
        <number>2</number>
       </property>
       <item>
-       <layout class="QGridLayout" name="gridLayout_23" columnstretch="0,1" rowminimumheight="0,0,0,0">
+       <layout class="QGridLayout" name="gridLayout_23" columnstretch="0,1" rowminimumheight="0,0,0">
         <property name="spacing">
          <number>2</number>
         </property>
@@ -1469,7 +1514,7 @@
      <item>
       <widget class="QLabel" name="label_44">
        <property name="text">
-        <string notr="true">hybrid controls</string>
+        <string notr="true">Hybrid controls</string>
        </property>
       </widget>
      </item>
@@ -1847,86 +1892,5 @@
   <tabstop>groupCheck_info</tabstop>
  </tabstops>
  <resources/>
- <connections>
-  <connection>
-   <sender>checkBox_transf_function_enabledO_false</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>label_29</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>52</x>
-     <y>929</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>136</x>
-     <y>939</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>checkBox_transf_function_enabledO_false</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>spinbox_transf_offsetB_0</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>76</x>
-     <y>934</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>351</x>
-     <y>937</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>checkBox_transf_function_enabledO_false</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>spinbox_transf_scaleB_1</receiver>
-   <slot>setDisabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>58</x>
-     <y>932</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>264</x>
-     <y>876</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>checkBox_transf_function_enabledX_false</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>label_30</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>44</x>
-     <y>908</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>145</x>
-     <y>909</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>checkBox_transf_function_enabledX_false</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>spinbox_transf_offsetA_0</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>33</x>
-     <y>904</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>346</x>
-     <y>917</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
